fix display bbo length ,bud fetch in browser job, fix description word wrap in job browser, fix bug mapping bid accepted

--- a/src/styles/components/_freelancer.scss
+++ b/src/styles/components/_freelancer.scss
@@ -75,6 +75,7 @@
                         font-size: 14px;
                         padding-bottom: 20px;
                         line-height: 1.5;
+                        word-wrap: break-word;
                     }
                     .status {
                         padding-bottom: 20px;
